FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20141102:
AUTHOR: bdrewery@FreeBSD.org

  SSP is now default. This can be disabled with WITHOUT_SSP.
  SSP_CFLAGS defaults to -fstack-protector.
  SSP will be used on all amd64 releases. It will only be used on i386
  releases over 10.0.

20141007:
AUTHOR: mat@FreeBSD.org

  The @cwd [path] construct in plist files is deprecated.  Instead of adding
  those lines to the plist:

  @cwd /
  etc/rc.d/foo
  var/db/bar
  @cwd /some
  @exec mkdir -p %D/nested/dir

  add this:

  /etc/rc.d/foo
  /var/db/bar
  @exec mkdir -p /some/nested/dir

20141002:
AUTHOR: bapt@FreeBSD.org

  New BUNDLE_LIBS knobs to allow a port to tell pkg(8) not to compute provided
  libraries, this is to be used when a port bundles libraries it doesn't want
  to expose to other ports.

20141001:
AUTHOR: tijl@FreeBSD.org

  Support for autoconf213, autoheader213, aclocal14 and automake14 has been
  removed from USE_AUTOTOOLS.

20140930:
AUTHOR: bdrewery@FreeBSD.org

  Building ports in a chroot or jail have always required a particular
  environment be setup. This was not clear though and the ports framework
  did not enforce it. These requirements are:
    1. Either a SRC_BASE/sys/sys/param.h, or /usr/include/sys/param.h be
       present with the __FreeBSD_version_ number of the target system,
       or OSVERSION be set in the environment. Lack of these would fallback
       on kern.osreldate before, which is no longer the case.
    2. UNAME_r,UNAME_v,UNAME_s all must be set for the target system.

  Not having these values in sync will now cause the build to error until it is
  resolved.

  Setting these in the environment can be done via your own wrapper scripts,